# garage-door-monitor

./: .cirrus.yml  .gitattributes  .gitignore  README.md
app/: Cargo.toml  README.md
app/.cargo/: config.toml
app/scripts/: build-pi-zero
app/src/: alert.rs  door_state.rs  home.html  http.rs  led.rs  lib.rs  main.rs
buildroot/: Config.in  copy-to-sd  defconfig  external.desc  external.mk  post-build.sh  post-image.sh
buildroot/config/: cmdline.txt  config.txt
buildroot/configs/: garage_defconfig  linux.config
buildroot/overlay/etc/: ntpd.conf
buildroot/overlay/etc/default/: garage-door-monitor  rsdate
buildroot/overlay/etc/init.d/: S43rsdate  S45garage  S49ntp  S99garage
buildroot/overlay/etc/network/: interfaces
buildroot/overlay/etc/profile.d/: garage.sh
buildroot/overlay/root/: current.version
buildroot/package/garage-door-monitor/: Config.in  garage-door-monitor.hash  garage-door-monitor.mk
buildroot/package/rsdate/: Config.in  rsdate.hash  rsdate.mk
buildroot/scripts/: genimage-raspberrypi0w.cfg  post-build.sh  post-image.sh
hardware/: Reed Mount.3mf  Reed Mount.FCStd  Reed Mount.FCStd1  Reed Mount.stl  Wiring.fzz
