[package]
name = "garage-door-monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rppal = "0.12.0"
signal-hook = "0.3.10"
timeago = { version = "0.3.0", default-features = false }
tiny_http = "0.8"
ureq = "2.2"
