[package]
name = "garage-door-monitor"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop-root = "0.1.1"
json = "0.12.4"
libc = "0.2"
log = "0.4.17"
rppal = "0.13.1"
syslog = "6.0"
signal-hook = "0.3.14"
timeago = { version = "0.3.1", default-features = false }
tiny_http = "0.12"
ureq = "2.5"
systemstat = "0.2.1"

[profile.release]
panic = "abort"
